--- a/main_file.tex
+++ b/main_file.tex
@@ -19,6 +19,11 @@
 \setkeys{Gin}{width=.6\textwidth}
 \graphicspath{ {./images/} }
 
+\newtheorem{proposition}{Proposition}
+
+\newenvironment{proof}
+ {\begin{trivlist} \item[] {\bf Proof.\ }}{\hfill$\Box$ \end{trivlist}}
+
 \title{Newsvendor Problems: A New Integrated Approach\\ to Forecasting and Optimisation}
 
 \author{Congzheng Liu\thanks{Department of Management Science,
@@ -26,7 +31,7 @@ Lancaster University, Lancaster LA1 4YX, UK.
 Email: {\tt \{c.liu19,a.n.letchford,i.svetunkov\}@lancaster.ac.uk}}
 \and Adam N.\ Letchford$^*$ \and Ivan Svetunkov$^*$} % end author list
 
-\date{Draft, 12th June 2020}
+\date{Draft, 13th June 2020}
 
 \begin{document}
 
@@ -186,87 +191,35 @@ and $p$ is the number of explanatory variables.
 
 After estimating the model, we can set our next order quantity to $\hat{Q}_{s+1}$. We remark that, while we focus on the linear regression model in this paper, dynamic models, such as ARIMA or ETS \cite{HKO08}, could be used instead just as efficiently. 
 
-It turns out that, in the case of the classical NVP, the proposed estimator has the following useful statistical properties:
-\begin{itemize}
-    \item \textbf{Quantile regression transformation}\\
-    We have (see Appendix \ref{app:A}):
-    \[
-        \begin{aligned}
-            \hat{\boldsymbol{\beta}}
-            &=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)}\\
-            &=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\{c_o[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^{+}+c_u[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^{+}\}}.
-        \end{aligned}
-    \]
-    By setting $\tau=\nicefrac{c_u}{(c_o+c_u)}$ and $\displaystyle \rho_{\tau}(u)=u(\tau-\mathbb{I}_{(u<0)})$, we can transform the estimating function into quantile regression:
-    \[
-         \hat{\boldsymbol{\beta}}=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s\rho_{\tau}(y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}).
-    \]
-    Therefore, the estimator inherts the consistency \cite{Koe05}, efficiency \cite{KM99} and the asymptotically normality properties \cite{KHM05} of quantile regression.
-    
-    \item \textbf{Scale and shift equivalence}\\
-    For any $a>0$, $\gamma\in \mathbb{R}^{p+1}$ and $\tau\in[0,1]$ (see Appendix \ref{app:B}),
-    \[
-        \hat{\boldsymbol{\beta}}(a\mathbf{y},\mathbf{X})=a\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
-    \]
-    \[
-        \hat{\boldsymbol{\beta}}(\mathbf{y}+\mathbf{X}\gamma,\mathbf{X})=\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X})+\gamma.
-    \]
-    
-    \item \textbf{Equivalence to reparameterization of design}\\
-    Let $A$ be any $(p+1)\times (p+1)$ non-singular matrix,
-    \[
+It turns out that, in the case of the classical NVP, the proposed estimator has the following statistical properties:
+\begin{proposition}[Scale and shift invariance]
+For any $a>0$, $\gamma\in \mathbb{R}^{p+1}$ and $\tau\in[0,1]$, we have
+\[
+    \hat{\boldsymbol{\beta}}(a\mathbf{y},\mathbf{X})=a\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
+\]
+\[
+    \hat{\boldsymbol{\beta}}(\mathbf{y}+\mathbf{X}\gamma,\mathbf{X})=
+    \hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X})+\gamma.
+\]
+\end{proposition}
+\begin{proof}
+See Appendix \ref{app:A}.
+\end{proof}
+
+\begin{proposition}[Invariance under reparameterization]
+Given any $(p+1)\times (p+1)$ non-singular matrix $A$, we have
+\[
         \hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}A)=A^{-1}\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
-    \]
-    Proof:\\
-    Define that
-    \[
-        \mathbf{D}=\mathbf{X}A
-        =\begin{pmatrix}
-            \mathbf{d}_1^{\mathsf{T}}\\
-            \mathbf{d}_2^{\mathsf{T}}\\
-            \vdots\\
-            \mathbf{d}_s^{\mathsf{T}}
-        \end{pmatrix}
-        =\begin{pmatrix}
-            \mathbf{x}_{1}^{\mathsf{T}}\mathbf{a}^1&\mathbf{x}_1^{\mathsf{T}}\mathbf{a}^2&\cdots &\mathbf{x}_1^{\mathsf{T}}\mathbf{a}^{p+1}\\
-            \mathbf{x}_2^{\mathsf{T}}\mathbf{a}^1&\mathbf{x}_2^{\mathsf{T}}\mathbf{a}^2&\cdots &\mathbf{x}_2^{\mathsf{T}}\mathbf{a}^{p+1}\\
-            \vdots &\vdots &\ddots &\vdots \\
-            \mathbf{x}_s^{\mathsf{T}}\mathbf{a}^1&\mathbf{x}_s^{\mathsf{T}}\mathbf{a}^2&\cdots &\mathbf{x}_s^{\mathsf{T}}\mathbf{a}^{p+1}
-        \end{pmatrix},
-    \]
-    where $\mathbf{a}^n$ is the $n$th column of matrix $A$.\\
-    We have
-    \[
-        \begin{aligned}
-            &\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}A)\\
-            &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)}\\
-            &\quad=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\{c_o[\mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^{+}+c_u[y_t-\mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta}]^{+}\}}.
-        \end{aligned}
-    \]
-    Since
-    \[
-        \begin{aligned}
-            \mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta}
-            &=\displaystyle\sum_{n=1}^{p+1}\mathbf{x}_t^{\mathsf{T}}\mathbf{a}^n\beta_n\\
-            &=\displaystyle\sum_{n=1}^{p+1}\displaystyle\sum_{m=1}^{p+1}x_{tm}a_{mn}\beta_n\\
-            &=\displaystyle\sum_{m=1}^{p+1}x_{tm}\mathbf{a}_m^{\mathsf{T}}\boldsymbol{\beta}\\
-            &=\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta},
-        \end{aligned}
-    \]
-    where $a_{mn}$ is the element at $m$th row and $n$th column of $A$.\\
-    We can derive:
-    \[
-        \begin{aligned}
-            &\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}A)\\
-            &\quad=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\left\{c_o\left[\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta}-y_t\right]^{+}+c_u\left[y_t-\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta}\right]^{+}\right\}}\\
-            &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta},y_t)}\\
-            &\quad=A^{-1}\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
-        \end{aligned}
-    \]
-    
-\end{itemize}
+\]
+\end{proposition}
+\begin{proof}
+See Appendix \ref{app:B}.
+\end{proof}
 
-
+Another interesting feature of our method is that it reduces to quantile regression in the case of the classical NVP. For a proof, see Appendix \ref{app:C}. Therefore, again in the classical case, our estimator
+inherits the desirable properties of quantile regression, such as
+consistency \cite{Koe05}, efficiency \cite{KM99} and asymptotic
+normality \cite{KHM05}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Computational Experiments} \label{se:results}
@@ -401,7 +354,7 @@ In this subsection, we consider the scenario where the error term of the demand 
             20y-8Q-4(Q-y)+5\E[\min \{(Q-y),u\}],& \text{if } Q\geq y\\
             20Q-8Q-0.01(y-Q)^2,& \text{if } Q< y,
         \end{cases}$ and $u\sim \mathcal{N}(30,5^2)$} (solution see \cite{KK18}).
-In this scenario, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. We don't have to make any change to the proposed method, since it makes no assumption to the solution of profit function. However, few amendment are required for the disjoint method. The disjoint method will still be operated in two phases. Mean and variance of the demand will be forecasted in the first phase, and a simulation algorithm will be used in order to generate the optimal quantile solution of the profit function in the second phase. Specifically, we conduct simulation on three different demand distribution each with 50,000 iterations and finally approximate the numerical quantile solution (target service level) of the nonlinear profit function to be 0.58. In the experiment, both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
+In this scenario, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. We don't have to make any change to the proposed method, since it makes no assumption to the solution of profit function. However, few amendment are required for the disjoint method. The disjoint method will still be operated in two phases. Mean and variance of the demand will be forecasted in the first phase, and a simulation algorithm will be used in order to generate the optimal quantile solution of the profit function in the second phase. Specifically, we conduct simulation on three different demand distribution each with 50,000 iterations and finally approximate the numerical quantile solution (target service level) of the nonlinear profit function to be 0.56. In the experiment, both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
 
 \subsection{Error term misspecification}
 In this subsection, we are interested in explore the behavior of our proposed method in the scenario where the error term is misspecified. Particularly, we generate our data from ARIMA $(1,0,0)(1,0,0)_4$ with error term follows Laplace$(0,141)$. Therefore, the mean and variance will be as same as $\mathcal{N}(0,200^2)$. As before, we assume that the model of the data generating process is known, and the underlying profit function is linear where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$. However, we fail to know the true distribution of the error term, and still assume it follows normal distribution $\mathcal{N}(0,200^2)$.
@@ -423,11 +376,90 @@ For future research, more scenarios of experiment should be considered and teste
 
 \appendix
 
+\section{Scale and Shift Invariance}
+\label{app:A}
 
+For invariance with respect to scaling:
+\[
+    \begin{aligned}
+        \hat{\boldsymbol{\beta}}(a\mathbf{y},\mathbf{X})
+        &=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},ay_t)}\\
+        &=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\{c_o[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-ay_t]^{+}+c_u[ay_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^{+}\}}\\
+        &=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi\left(\mathbf{x}_t^{\mathsf{T}}\frac{\boldsymbol{\beta}}{a},y_t\right)}\\
+        &=a\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
+    \end{aligned}
+\]
 
+\noindent
+For invariance with respect to shifting:
+\[
+    \begin{aligned}
+        &\hat{\boldsymbol{\beta}}(\mathbf{y}+\mathbf{X}\gamma,\mathbf{X})\\
+        &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t+\mathbf{x}_t^{\mathsf{T}}\gamma)}\\
+        &\quad=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\{c_o[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t-\mathbf{x}_t^{\mathsf{T}}\gamma]^{+}+c_u[y_t+\mathbf{x}_t^{\mathsf{T}}\gamma-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^{+}\}}\\
+        &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi[\mathbf{x}_t^{\mathsf{T}}(\boldsymbol{\beta}-\gamma),y_t]}\\
+        &\quad=\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X})+\gamma.
+    \end{aligned}
+\]
 
+\section{Invariance under Reparameterization}
+\label{app:B}
 
-\section{Derivation of quantile regression transformation}\label{app:A}
+Define
+    \[
+        \mathbf{D}=\mathbf{X}A
+        =\begin{pmatrix}
+            \mathbf{d}_1^{\mathsf{T}}\\
+            \mathbf{d}_2^{\mathsf{T}}\\
+            \vdots\\
+            \mathbf{d}_s^{\mathsf{T}}
+        \end{pmatrix}
+        =\begin{pmatrix}
+            \mathbf{x}_{1}^{\mathsf{T}}\mathbf{a}^1&\mathbf{x}_1^{\mathsf{T}}\mathbf{a}^2&\cdots &\mathbf{x}_1^{\mathsf{T}}\mathbf{a}^{p+1}\\
+            \mathbf{x}_2^{\mathsf{T}}\mathbf{a}^1&\mathbf{x}_2^{\mathsf{T}}\mathbf{a}^2&\cdots &\mathbf{x}_2^{\mathsf{T}}\mathbf{a}^{p+1}\\
+            \vdots &\vdots &\ddots &\vdots \\
+            \mathbf{x}_s^{\mathsf{T}}\mathbf{a}^1&\mathbf{x}_s^{\mathsf{T}}\mathbf{a}^2&\cdots &\mathbf{x}_s^{\mathsf{T}}\mathbf{a}^{p+1}
+        \end{pmatrix},
+    \]
+    where $\mathbf{a}^n$ is the $n$th column of matrix $A$. We have
+    \[
+        \begin{aligned}
+            &\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}A)\\
+            &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)}\\
+            &\quad=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\{c_o[\mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^{+}+c_u[y_t-\mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta}]^{+}\}}.
+        \end{aligned}
+    \]
+    Note that
+    \[
+        \begin{aligned}
+            \mathbf{d}_t^{\mathsf{T}}\boldsymbol{\beta}
+            &=\displaystyle\sum_{n=1}^{p+1}\mathbf{x}_t^{\mathsf{T}}\mathbf{a}^n\beta_n\\
+            &=\displaystyle\sum_{n=1}^{p+1}\displaystyle\sum_{m=1}^{p+1}x_{tm}a_{mn}\beta_n\\
+            &=\displaystyle\sum_{m=1}^{p+1}x_{tm}\mathbf{a}_m^{\mathsf{T}}\boldsymbol{\beta}\\
+            &=\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta},
+        \end{aligned}
+    \]
+    where $a_{mn}$ is the element at $m$th row and $n$th column of $A$.
+    From this, we have:
+    \[
+        \begin{aligned}
+            &\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}A)\\
+            &\quad=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\left\{c_o\left[\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta}-y_t\right]^{+}+c_u\left[y_t-\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta}\right]^{+}\right\}}\\
+            &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}A\boldsymbol{\beta},y_t)}\\
+            &\quad=A^{-1}\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
+        \end{aligned}
+    \]
+    
+\section{Equivalence to Quantile Regression}
+\label{app:C}
+We are here to show the loss function used in our proposed method is transformable to the typical loss function of quantile regression. In quantile regression, the loss function is defined as \cite{KH01}:
+\[
+    \hat{\boldsymbol{\beta}}=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s\rho_{\tau}(y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}),
+\]
+where $\displaystyle \rho_{\tau}(u)=u(\tau-\mathbb{I}_{(u<0)})$, and $\mathbb{I}$ is an indicator function. Thus, all we need to do is to prove:
+\[
+    \text{max}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)}=\text{min}\displaystyle\sum_{t=1}^s\rho_{\tau}(y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}).
+\]
 We have:
 \[
     \min[a,b]=a-[a-b]^+,
@@ -440,45 +472,25 @@ We can transform:
 \[
     \begin{aligned}
         \pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)
-        &=p\min[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t]-v\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}+c_h[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\\
-        &=p\{\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+\}-v\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}+c_h[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\\
-        &=(p-v)\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}+(c_h-p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+.
+        &=p\min[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t]-v\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-c_h[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+-c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\\
+        &=p\{\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+\}-v\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-c_h[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+-c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\\
+        &=(p-v)\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-(c_h+p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+-c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+.
     \end{aligned}
 \]
 Therefore, we have (since $y_t$ is fixed):
 \[
     \begin{aligned}
-        &\text{max}\displaystyle\sum_{s=1}^t{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)}\\
-        &\quad=\text{max}\displaystyle\sum_{t=1}^s\{(p-v)\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}+(c_h-p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}\\
-        &\quad=\text{max}\displaystyle\sum_{t=1}^s\{(p-v)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]+(c_h-p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}\\
+        &\text{max}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)}\\
+        &\quad=\text{max}\displaystyle\sum_{t=1}^s\{(p-v)\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-(c_h+p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+-c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}\\
+        &\quad=\text{max}\displaystyle\sum_{t=1}^s\{(p-v)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]-(c_h+p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+-c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}\\
         &\quad=\text{max}\displaystyle\sum_{t=1}^s\{(p-v)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+-(p-v)[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\\
-        &\qquad+(c_h-p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}\\
-        &\quad=\text{min}\displaystyle\sum_{t=1}^s\{(v-c_h)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++(p-v-c_s)[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}
+        &\qquad-(c_h+p)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^+-c_s[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}\\
+        &\quad=\text{min}\displaystyle\sum_{t=1}^s\{(v+c_h)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++(p-v+c_s)[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}\\
+        &\quad=\text{min}\displaystyle\sum_{t=1}^s\{c_o[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++c_u[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}.
     \end{aligned}
 \]
-
-\section{Derivation of scale and shift equivalence}\label{app:B}
-Scale equivalence:
+By setting $\tau=\nicefrac{c_u}{(c_o+c_u)}$, we have:
 \[
-    \begin{aligned}
-        \hat{\boldsymbol{\beta}}(a\mathbf{y},\mathbf{X})
-        &=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},ay_t)}\\
-        &=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\{c_o[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-ay_t]^{+}+c_u[ay_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^{+}\}}\\
-        &=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi\left(\mathbf{x}_t^{\mathsf{T}}\frac{\boldsymbol{\beta}}{a},y_t\right)}\\
-        &=a\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
-    \end{aligned}
+    \text{max}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t)}=\text{min}\displaystyle\sum_{t=1}^s\{(1-\tau)[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t]^++\tau[y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^+\}=\text{min}\displaystyle\sum_{t=1}^s\rho_{\tau}(y_t-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}).
 \]
-    
-Shift equivalence:
-\[
-    \begin{aligned}
-        &\hat{\boldsymbol{\beta}}(\mathbf{y}+\mathbf{X}\gamma,\mathbf{X})\\
-        &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta},y_t+\mathbf{x}_t^{\mathsf{T}}\gamma)}\\
-        &\quad=\text{argmin}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\{c_o[\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}-y_t-\mathbf{x}_t^{\mathsf{T}}\gamma]^{+}+c_u[y_t+\mathbf{x}_t^{\mathsf{T}}\gamma-\mathbf{x}_t^{\mathsf{T}}\boldsymbol{\beta}]^{+}\}}\\
-        &\quad=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi[\mathbf{x}_t^{\mathsf{T}}(\boldsymbol{\beta}-\gamma),y_t]}\\
-        &\quad=\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X})+\gamma.
-    \end{aligned}
-\]
-
-
 \end{document}
