--- a/main_file.tex
+++ b/main_file.tex
@@ -31,7 +31,7 @@ Lancaster University, Lancaster LA1 4YX, UK.
 Email: {\tt \{c.liu19,a.n.letchford,i.svetunkov\}@lancaster.ac.uk}}
 \and Adam N.\ Letchford$^*$ \and Ivan Svetunkov$^*$} % end author list
 
-\date{Draft, 21st June 2020}
+\date{Draft, 25th June 2020}
 
 \begin{document}
 
@@ -93,7 +93,8 @@ It is common to call $c_u= p-v+c_s$ the ‘underage’ cost and $c_o = v+c_h$ th
 \[
     Q^* = F^{-1}\left( \frac{c_u}{c_o+c_u} \right),
 \]
-where $F^{-1}$ is the inverse function of $F$. Thus, $Q^*$ is the $\tau$\textsuperscript{th} quantile of $f$, with $\tau=\nicefrac{c_u}{(c_o+c_u)}$.
+where $F^{-1}$ is the inverse function of $F$. Thus, $Q^*$ is the $\tau$\textsuperscript{th} quantile of $f$, with $\tau=\nicefrac{c_u}{(c_o+c_u)}$. One can think of the quantity
+$c_u/(c_o+c_u)$ as a ``target service level".
 
 \subsection{More complex newsvendor problems} %\label{sub:lit2}
 
@@ -147,7 +148,7 @@ For each historical period $t\in [1,s]$, we assume that the observed demand $y_t
 
 Of course, in practice, the distributions $Y_t$ are unknown, and the values $Q_t^*$ are not observable. So we approximate the $Q_t^*$ values using a linear regression model. For each $t$, the regression model yields an estimate of $Q^*_t$, which we denote by $\hat{Q}_t$. The estimate $\hat{Q}_{s+1}$ can then be used as the order quantity in the next time period.
 
-The crucial feature of our approach is that, instead of using the standard least-squares loss function to estimates the regression parameters, we choose the parameters that maximise the expected profit function $\sum_{t=1}^s{\pi \big( \hat{Q}_t,y_t \big)}$. In more detail, we wish to compute the vector
+The crucial feature of our approach is that, instead of using the standard least-squares loss function to estimates the regression parameters, we choose the parameters that maximise the empirical expected profit function $\sum_{t=1}^s{\pi \big( \hat{Q}_t,y_t \big)}$. In more detail, we wish to compute the vector
 \[
     \hat{\boldsymbol{\beta}}=\text{argmax}_{\boldsymbol{\beta}\in \mathbb{R}^{p+1}}\displaystyle\sum_{t=1}^s{\pi(\hat{Q}_t,y_t)},
 \]
@@ -193,7 +194,7 @@ After estimating the model, we can set our next order quantity to $\hat{Q}_{s+1}
 
 It turns out that, in the case of the classical NVP, the proposed estimator has the following statistical properties:
 \begin{proposition}[Scale and shift invariance]
-For any $a>0$, $\gamma\in \mathbb{R}^{p+1}$ and $\tau\in[0,1]$, we have
+For any $a>0$, $\gamma\in \mathbb{R}^{p+1}$, we have
 \[
     \hat{\boldsymbol{\beta}}(a\mathbf{y},\mathbf{X})=a\hat{\boldsymbol{\beta}}(\mathbf{y},\mathbf{X}).
 \]
@@ -224,39 +225,52 @@ normality \cite{KHM05}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Computational Experiments} \label{se:results}
 
-\subsection{Simulation design}
+In this section, we report on some extensive computational experiments
+that we conducted, in order to gain insight into the strengths and weakness of our approach relative to existing approaches. Subsection \ref{sub:exp1}
+concerns the simplest case, in which the profit function is linear and the
+underlying data generation process (DGP) is known. Subsection \ref{sub:exp2}
+deals with the case in which the profit function is nonlinear, and Subsection \ref{sub:exp3} examines the case in which the model is misspecified.
 
-In this section, we conduct the simulation experiment in order to demonstrate the performance of the proposed method. The data are simulated from ARIMA $(1,0,0)(1,0,0)_4$ with $\theta=0.3,\Theta=0.5$ and constant level $=500$, and the simulation will be performed on 20,000 iterations. We consider the simplest scenario in the beginning, where the underlying profit function is linear, the error term of the data generating process (DGP) follows normal distribution $\mathcal{N}(0,200^2)$, and the model of DGP is known. Specifically, we consider three profit functions \footnote{
-The parameters of three profit functions are:
+\subsection{Linear case} \label{sub:exp1}
+
+In our first experiment, we consider the classical NVP with quarterly demand data, and we assume that the DGP for demand is known. In more detail, we assume that the DGP is a seasonal ARIMA $(1,0,0)(1,0,0)_4$ process with $\theta=0.3$, $\Theta=0.5$, and constant level $500$. We also assume that the error term of the DGP follows a normal distribution $\mathcal{N}(0,200^2)$.
+
+We also consider three (linear) profit functions:
 \begin{enumerate}
     \item $p=20$, $v=8$, $c_h=-3$, $c_s=-7$
     \item $p=20$, $v=8$, $c_h=3$, $c_s=7$
-    \item $p=20$, $v=10$, $c_h=-3$, $c_s=-7$
+    \item $p=20$, $v=10$, $c_h=-3$, $c_s=-7$.
 \end{enumerate}
-}, and five data sizes (40,120,480,1200,4800) in order to see how the proposed method performs when the target service level and/or the learning period vary.
+One can check that, for these, the target service level evaluates to
+$0.5$, $0.63$ and $0.3$, respectively.
 
-In the experiment, we use seasonal dummies and lag term 1 and 4 as explanatory variables for the proposed method. Moreover, we use Limited-memory BFGS \cite{LN89} as the optimisation algorithm for $\hat{\boldsymbol{\beta}}$ computing. Besides the proposed method, two benchmark methods are selected to compare performance with:
+We begin by simulating 20,000 sets of demand data, each consisting of 4800 time periods. From each set, we also extract subsequences of length 40, 120, 480 and 1200. These will be used to explore how the amount of data available affects the performance of each method.
+
+In our proposed method (``PM"), we use seasonal dummies and 1st and 4th lags as explanatory variables. Moreover, we use limited-memory BFGS \cite{LN89} as the optimisation algorithm for the computation of $\hat{\boldsymbol{\beta}}$. Besides the proposed method, two benchmark methods are also considered:
 \begin{itemize}
-    \item Disjoint method that use ARIMA $(1,0,0)(1,0,0)_4$ to fit in the first phase and determine the optimal quantity by solving the profit function in the second phase,
-    \item Integrated method that use Quantile Regression with seasonal dummies and lag term 1 and 4 as explanatory variables.
+    \item A disjoint method (``DJ"), that estimates the parameters of the ARIMA $(1,0,0)(1,0,0)_4$ process in the first phase, and determine the optimal order quantity in the second phase.
+    \item An integrated method that use Quantile Regression (``QR"), with seasonal dummies and 1st and 4th lags as explanatory variables.
 \end{itemize}
-Moreover, we use the exact model and parameters from DGP to perform a forecast and use it as bound. We build the proposed method and benchmark methods based on the given data-set, and compare their performance on the $1$-step ahead forecast. The comparison of performance includes:
+Moreover, we consider a fourth method, in which we use the exact model and parameters from the DGP to perform a forecast, and determine the order quantity accordingly. (This last method is an ``idealised" method since, in real life, one would not know the model or parameters precisely.) We call this last method ``DGP".
+
+For each set of demand data and each method, we computed $\hat{Q}_{s+1}$, the 1-step ahead forecast. We then computed the following three quantities:
 \begin{enumerate}
     \item Percentage Profit Loss ($PPL=\frac{\pi(y_{s+1},y_{s+1})-\pi(\hat{Q}_{s+1},y_{s+1})}{\pi(y_{s+1},y_{s+1})}$),
     \item Service Level ($SL=\mathbb {I}_{(\hat{Q}_{s+1}>y_{s+1})}$),
     \item Fill Rate ($FR=\frac{\min\{\hat{Q}_{s+1},y_{s+1}\}}{y_{s+1}}$).
 \end{enumerate}
 
-The results are presented in tables and figures.\footnote{See appendix for figures that not included here.} Figure \ref{fig:ppl0.3} represents the average percentage profit loss of methods where target service level $=0.3$. DGP denotes the exact ARIMA model and parameters from data generating process, DJ denotes the disjoint method, QR denotes the quantile regression method, and PM denotes our proposed method. We can see both the proposed method and the benchmark methods converge to DGP when data size grows. Besides, the performance of our proposed method and quantile regression are very similar. This is exactly what we expected since we have proved the proposed mehod can be reduced to quantile regression in Section \ref{se:new}. However, when the data size is small, the disjoint method performed slightly better than the quantile regression method and the proposed method. 
+ Figure \ref{fig:ppl0.3} shows the average percentage profit loss obtained when the target service level was set to $0.3$. As one would hope, the losses for all methods converge as the data size grows. It is also apparent that PM and QR have very similar performance. This is to be expected, given that PM is equivalent to QR in the linear case.
 
-\begin{figure}[ht]
+\begin{figure}
 \centering
-\caption{Percentage profit loss vs. data size at 0.3 target service level}
+\caption{Average percentage profit loss vs. data size at 0.3 target service level}
 \includegraphics{linear-norm-plot_files/figure-latex/ppl0.3-1.pdf}
 \label{fig:ppl0.3}
 \end{figure}
 
-Figure \ref{fig:sl0.3} represents the proportion of iterations that the demand is satisfied. We can see that both the three methods and the DGP converge to the target service level 0.3 when data length grows. Yet, the disjoint method approaches the target service level from down side while the proposed method and the quantile regression approach it from up side. This phenomenon could be explained by the difference in mechanisms of the disjoint method and integrated method. The disjoint method estimates the mean and variance of the demand distribution in the first phase. When the data size is small, the estimated variance will be much bigger than the true variance. The variance, however, plays important role in determining quantile in the second phase. Therefore, big variance makes the solution of the optimal quantity 'far away' from 0.5, which leads to lower service level than target. On the other hand, the integrated method approaches the true optimal quantity by applying the optimisation/heuristic algorithm directly on total profit. Therefore, even if there are two quantities that equally distanced from the optimal quantity, the algorithm will always favor the one with better profit. In this particular profit function, the algorithm will always favor the quantity with higher service level.
+Figure \ref{fig:sl0.3} represents the average service level, i.e., the proportion of iterations in which the demand was satisfied in the simulation.
+We see that all four methods converge to the desired target of 0.3 as the data length grows. Interestingly, DJ approaches the target from below, while PM and QR approach it from above. A possible explanation is as follows. In DJ, the estimated variance tends to be larger than the true variance when the data length is small. This causes the order quantity often to be less than it should be. On the other hand, the integrated methods take the costs of under- and over-stocking into account. For the given cost parameters, over-stocking is less costly than under-stocking.
 
 \begin{figure}[ht]
 \centering
@@ -265,7 +279,11 @@ Figure \ref{fig:sl0.3} represents the proportion of iterations that the demand i
 \label{fig:sl0.3}
 \end{figure}
 
-By fixing the target service level, we can compare the performance of methods in different data size in Table \ref{tab:size_effect0.3}. The value in columns of percentage profit loss and service level are in line with the results in Figure \ref{fig:ppl0.3} and Figure \ref{fig:sl0.3}. The columns of fill rate, on the other hand, provide us more information about demand fulfilment. The service level represents the proportion of iterations that the demand is satisfied, while the fill rate not only provides whether the demand is satisfied or not, but also provides in what percentage the demand is filled. In the case demand is not satisfied, it is well expecting that the gap of inventory is as small as possible. In Table \ref{tab:size_effect0.3}, we can see that the proposed method maintains a very high fill rate in all data size. 
+Table \ref{tab:size_effect0.3} shows the full results for a target of 0.3.
+As one might expect, the average fill rate follows a similar pattern to
+the service level. Moreover, the fill rate is very high for all methods
+and all data sizes.\footnote{{\bf It might be better to present the fill rate
+in the same way that we presented the average loss and service level. At the moment, it looks a bit strange.}}\\
 
 \begin{table}[ht]
 \caption{Size effect at 0.3 target service level}
@@ -286,7 +304,10 @@ Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & p
 \end{tabular}} 
 \end{table}
 
-On the other hand, we can also compare the methods' performance regarding to different target service levels while fix the data size as in Table \ref{tab:level_effect40} and Table \ref{tab:level_effect4800}, which represent the case data is insufficient and the case data is abundant, respectively. We can see that in both tables, the percentage profit loss of all methods is particular high at 0.63 target service level. It is due to the opportunity cost is different in each profit function. In the function with 0.63 target service level, the 'underage' cost is 19 and the 'overage' cost is 11. However, in the function with 0.3 target service level, those costs are 3 and 7. Those high opportunity costs lead to severe overstock/understock punishment, and affects percentage profit loss. As we can see in Table \ref{tab:level_effect4800}, all methods perform similarly when data is sufficient. This result is in line with Figure \ref{fig:ppl0.3} and Figure \ref{fig:sl0.3} where target service level is 0.3. In Table \ref{tab:level_effect40}, where the data size is small, we can see that both the proposed method and benchmarks methods generate acceptable percentage profit loss compared with DGP. Yet, the service level of disjoint method is very poor in all cases. This result is in line with the findings from Figure \ref{fig:sl0.3}.
+\noindent
+{\bf ENGLISH CHECKED UP TO HERE.}\\
+\\
+On the other hand, we can also compare the methods' performance regarding to different target service levels while fixing the data size as in Table \ref{tab:level_effect40} and Table \ref{tab:level_effect4800}, which represent the case data is insufficient and the case data is abundant, respectively. We can see that in both tables, the percentage profit loss of all methods is particular high at 0.63 target service level. It is due to the opportunity cost is different in each profit function. In the function with 0.63 target service level, the 'underage' cost is 19 and the 'overage' cost is 11. However, in the function with 0.3 target service level, those costs are 3 and 7. Those high opportunity costs lead to severe overstock/understock punishment, and affects percentage profit loss. As we can see in Table \ref{tab:level_effect4800}, all methods perform similarly when data is sufficient. This result is in line with Figure \ref{fig:ppl0.3} and Figure \ref{fig:sl0.3} where target service level is 0.3. In Table \ref{tab:level_effect40}, where the data size is small, we can see that both the proposed method and benchmarks methods generate acceptable percentage profit loss compared with DGP. Yet, the service level of disjoint method is very poor in all cases. This result is in line with the findings from Figure \ref{fig:sl0.3}.
 
 \begin{table}[ht]
 \caption{Target service level effect on percentage profit loss and service level at 40 data size}
@@ -324,7 +345,10 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \end{tabular}}
 \end{table}
 
-\subsection{Complex profit function}
+\footnote{See appendix for figures that not included here.}
+
+\subsection{Nonlinear cost functions} \label{sub:exp2}
+
 In this subsection, we consider the scenario where the error term of the demand follows normal distribution, and the model of the data generating process is known, but the underlying profit function is nonlinear\footnote{$
         \pi(Q,y)=
         \begin{cases}
@@ -353,7 +377,8 @@ The results can be seen in Figure \ref{fig:non}. We can see that the percentage 
 \end{figure}
 
 
-\subsection{Misleading information}
+\subsection{Misleading information} \label{sub:exp3}
+
 In this subsection, we consider the performance of our proposed method, compared with the disjoint method, in the scenario where we possess misleading information. 
 
 
